Uppfærði terminal fallið

--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -40,16 +40,18 @@
       "source": [
         "# (floki@hi.is)\n",
         "# test er staða á borðinu og er 10x10 np matrix \n",
-        "def isTerminal(discs_on_board, player):\n",
+        "def isTerminal(discs_on_board, player, n):\n",
         "    tempWin = [[1,1,1,1,1,0,0,0,0,0],\n",
         "              [0,1,1,1,1,1,0,0,0,0],\n",
         "              [0,0,1,1,1,1,1,0,0,0],\n",
         "              [0,0,0,1,1,1,1,1,0,0],\n",
         "              [0,0,0,0,1,1,1,1,1,0],\n",
         "              [0,0,0,0,0,1,1,1,1,1]]\n",
+        "    extraWin = [1,1,1,1,1,1,1,1,1,1]\n",
         "    temp_board = discs_on_board.copy()\n",
         "    temp_board[temp_board == -1] = player\n",
         "    test = temp_board == player\n",
+        "    #test[row][col] = 1\n",
         "    max_col = len(test[0])\n",
         "    max_row = len(test)\n",
         "    cols = [[] for _ in range(max_col)]\n",
@@ -69,21 +71,31 @@
         "    np_lists = np.array(lists, dtype=object)\n",
         "\n",
         "    filt = []\n",
-        "    for i in range(0, len(lists)):\n",
+        "    for i in range(0,len(lists)):\n",
         "        filt_i = len(np_lists[i]) >= 5 and sum(np_lists[i]) >= 5\n",
         "        filt.append(filt_i)\n",
         "\n",
         "    new_list = list(np_lists[filt])\n",
         "    temp = []\n",
         "    for i in new_list:\n",
-        "        if len(i) < 10:\n",
+        "        if(len(i) < 10):\n",
         "            i = i + ([0.0]*(10 - len(i)))\n",
         "        temp.append(i)\n",
-        "    if len(temp) == 0:\n",
+        "    if(len(temp) == 0):\n",
         "        return False\n",
-        "    for i in tempWin:\n",
-        "        for j in temp:\n",
-        "            if sum(np.multiply(i, j)) >= 5:\n",
+        "    player_sum = 0\n",
+        "    for i in temp:\n",
+        "        temp_sum = 0\n",
+        "        for j in tempWin:\n",
+        "            temp_sum = sum(np.multiply(i, j))\n",
+        "            if temp_sum >= 5:\n",
+        "              if n == 2:\n",
+        "                player_sum = player_sum + temp_sum\n",
+        "                extra_sum = sum(np.multiply(extraWin, i));\n",
+        "                if player_sum >= 10 or extra_sum >= 10:\n",
+        "                  return True\n",
+        "                break\n",
+        "              else: \n",
         "                return True\n",
         "    return False"
       ]
