--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -1011,11 +1011,12 @@
         "board_rows = 10\n",
         "board_cols = 10\n",
         "\n",
-        "def heuristic_1(discs_on_board, hand, player, i, j):\n",
-        "  # Namminamm\n",
+        "heuristic_1_table = np.zeros((n, 10, 10))\n",
         "\n",
-        "  temp_board = discs_on_board.copy()\n",
-        "  temp_board[temp_board == -1] = player\n",
+        "def heuristic_1(temp_board, hand, player, i, j):\n",
+        "  # Namminamm\n",
+        "  # temp_board: discs_on_board, nema player í stað -1 í hornunum\n",
+        "\n",
         "  s = 0\n",
         "\n",
         "  # Horizontal\n",
@@ -1096,7 +1097,39 @@
         "    while t <= maxt:\n",
         "      if temp_board[i+t][j-t] == player:\n",
         "        s += min(min(t - mint, maxt - t), range - 5) + 1\n",
-        "        t -= 1"
+        "        t -= 1\n",
+        "\n",
+        "def update_heuristic_1(discs_on_board, hand, player, i, j):\n",
+        "  # Uppfæra Heuristic 1 eftir leik\n",
+        "\n",
+        "  temp_board = discs_on_board.copy()\n",
+        "  temp_board[temp_board == -1] = player\n",
+        "\n",
+        "  for p in range(n):\n",
+        "    if p+1 == player:\n",
+        "      heuristic_1_table[p][i][j] = heuristic_1(discs_on_board, hand, player, i, j)\n",
+        "    else:\n",
+        "      heuristic_1_table[p][i][j] = 0\n",
+        "\n",
+        "  # Horizontal\n",
+        "  for p in range(n):\n",
+        "    for t in range(1, 5):\n",
+        "      if temp_board[i+t][j] != 0 and temp_board[i+t][j] != p:\n",
+        "        break\n",
+        "      heuristic_1_table[player-1][i+t][j] = heuristic_1(temp_board, hand, player, i+t, j)\n",
+        "    for t in range(1, 5):\n",
+        "      if temp_board[i-t][j] != 0 and temp_board[i-t][j] != p:\n",
+        "        break\n",
+        "      heuristic_1_table[player-1][i-t][j] = heuristic_1(temp_board, hand, player, i-t, j)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mega_board = np.array((10, 10, 3, 2))"
       ]
     }
   ],
