--- a/verk3/Sequence.ipynb
+++ b/verk3/Sequence.ipynb
@@ -1,21 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "name": "Sequence.ipynb",
-   "provenance": [],
-   "collapsed_sections": []
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3 (ipykernel)"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -38,20 +21,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "id": "4RWk2LpLs1ec"
    },
+   "outputs": [],
    "source": [
     "import numpy as np"
-   ],
-   "execution_count": 5,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "id": "4MmH-mfddC4v"
    },
+   "outputs": [],
    "source": [
     "# (floki@hi.is)\n",
     "# test er staða á borðinu og er 10x10 np matrix \n",
@@ -102,15 +87,15 @@
     "            if(sum(np.multiply(i, j))>= 5):\n",
     "                return True\n",
     "    return False"
-   ],
-   "execution_count": 6,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "id": "U5HTdRRjsSai"
    },
+   "outputs": [],
    "source": [
     "# (tpr@hi.is)\n",
     "# some global variables used by the games, what we get in the box!\n",
@@ -198,12 +183,11 @@
     "    if debug:\n",
     "      print(\"Hand after change\", hand)\n",
     "  return deck, hand"
-   ],
-   "execution_count": 7,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,51 +195,6 @@
     "id": "irSgHwRelx-N",
     "outputId": "2879ea8b-8b74-40d0-ea91-baa23c57ccdb"
    },
-   "source": [
-    "# random game player to the end!\n",
-    "n = 2 # number of players, they are numbered 1,2,3,4,...\n",
-    "deck, hand, discs_on_board = initGame(n) # initial hand and empty discs on board!\n",
-    "pretty_print(discs_on_board, hand) # lets print the board and see their hand!\n",
-    "# lets get three types of legal moves, by normal playing cards, one-eyed Jacks (1J) and two-eyed Jacks (2J):\n",
-    "player = 1 # test player \"1\"\n",
-    "# This simple test run assumes that the player will always try to play a normal card first and then use the Jacks.\n",
-    "no_feasible_move = 0 # counts how many player in a row say pass!\n",
-    "while True:\n",
-    "  legal_moves, legal_moves_1J, legal_moves_2J = getMoves(discs_on_board, hand, player)\n",
-    "  if len(legal_moves) > 0:\n",
-    "    # this is how we would perform a random move using the normal cards:\n",
-    "    k = np.random.choice(range(len(legal_moves)),1)\n",
-    "    (i,j) = tuple(legal_moves[np.random.choice(range(len(legal_moves)),1)][0])\n",
-    "    # print(\"card played is %d or %s\" % (cards_on_board[i,j], the_cards[cards_on_board[i,j]]))\n",
-    "    disc = player\n",
-    "    played_card = cards_on_board[i,j]\n",
-    "  elif len(legal_moves_1J) > 0:\n",
-    "    k = np.random.choice(range(len(legal_moves_1J)),1)\n",
-    "    disc = 0 # remove disc!\n",
-    "    played_card = 48\n",
-    "  elif len(legal_moves_2J) > 0:\n",
-    "    k = np.random.choice(range(len(legal_moves_2J)),1)\n",
-    "    disc = player\n",
-    "    played_card = 49\n",
-    "  else:\n",
-    "    print(\"Don't have a legal move for player (can this really happen?): \", player)\n",
-    "    disc = -1\n",
-    "    no_feasible_move += 1\n",
-    "  if disc >= 0:\n",
-    "    no_feasible_move = 0\n",
-    "    # now lets place or remove a disc on the board\n",
-    "    discs_on_board[i,j] = disc\n",
-    "    # now we need to draw a new card\n",
-    "    deck, hand[player-1] = drawCard(deck, hand[player-1], played_card)\n",
-    "    # lets pretty print this new state og the game\n",
-    "    pretty_print(discs_on_board, hand)\n",
-    "  if (no_feasible_move == n) | (len(deck) == 0) | (True == isTerminal(discs_on_board, player)):\n",
-    "    # Bætti við að það prentar út hnitin á síðasta spili sem var spilað. Léttara að finna hvar leikmaðurinn vann.\n",
-    "    print(\"no_feasible_move = \", no_feasible_move, \" player = \", player, \" cards in deck = \", len(deck),\" last played card at coords: (\",i,j,\")\")\n",
-    "    break\n",
-    "  player = player%n+1 # next player in line\n"
-   ],
-   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -1092,7 +1031,77 @@
       "no_feasible_move =  0  player =  2  cards in deck =  22  last played card at coords: ( 6 5 )\n"
      ]
     }
+   ],
+   "source": [
+    "# random game player to the end!\n",
+    "n = 2 # number of players, they are numbered 1,2,3,4,...\n",
+    "deck, hand, discs_on_board = initGame(n) # initial hand and empty discs on board!\n",
+    "pretty_print(discs_on_board, hand) # lets print the board and see their hand!\n",
+    "# lets get three types of legal moves, by normal playing cards, one-eyed Jacks (1J) and two-eyed Jacks (2J):\n",
+    "player = 1 # test player \"1\"\n",
+    "# This simple test run assumes that the player will always try to play a normal card first and then use the Jacks.\n",
+    "no_feasible_move = 0 # counts how many player in a row say pass!\n",
+    "while True:\n",
+    "  legal_moves, legal_moves_1J, legal_moves_2J = getMoves(discs_on_board, hand, player)\n",
+    "  if len(legal_moves) > 0:\n",
+    "    # this is how we would perform a random move using the normal cards:\n",
+    "    k = np.random.choice(range(len(legal_moves)),1)\n",
+    "    (i,j) = tuple(legal_moves[np.random.choice(range(len(legal_moves)),1)][0])\n",
+    "    # print(\"card played is %d or %s\" % (cards_on_board[i,j], the_cards[cards_on_board[i,j]]))\n",
+    "    disc = player\n",
+    "    played_card = cards_on_board[i,j]\n",
+    "  elif len(legal_moves_1J) > 0:\n",
+    "    k = np.random.choice(range(len(legal_moves_1J)),1)\n",
+    "    disc = 0 # remove disc!\n",
+    "    played_card = 48\n",
+    "  elif len(legal_moves_2J) > 0:\n",
+    "    k = np.random.choice(range(len(legal_moves_2J)),1)\n",
+    "    disc = player\n",
+    "    played_card = 49\n",
+    "  else:\n",
+    "    print(\"Don't have a legal move for player (can this really happen?): \", player)\n",
+    "    disc = -1\n",
+    "    no_feasible_move += 1\n",
+    "  if disc >= 0:\n",
+    "    no_feasible_move = 0\n",
+    "    # now lets place or remove a disc on the board\n",
+    "    discs_on_board[i,j] = disc\n",
+    "    # now we need to draw a new card\n",
+    "    deck, hand[player-1] = drawCard(deck, hand[player-1], played_card)\n",
+    "    # lets pretty print this new state og the game\n",
+    "    pretty_print(discs_on_board, hand)\n",
+    "  if (no_feasible_move == n) | (len(deck) == 0) | (True == isTerminal(discs_on_board, player)):\n",
+    "    # Bætti við að það prentar út hnitin á síðasta spili sem var spilað. Léttara að finna hvar leikmaðurinn vann.\n",
+    "    print(\"no_feasible_move = \", no_feasible_move, \" player = \", player, \" cards in deck = \", len(deck),\" last played card at coords: (\",i,j,\")\")\n",
+    "    break\n",
+    "  player = player%n+1 # next player in line\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "Sequence.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
