--- a/verk3/test/SequenceClassTest.ipynb
+++ b/verk3/test/SequenceClassTest.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [
     {
@@ -20,19 +20,23 @@
       " [ 0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  0  0  0  0  0  0  0  0 -1]]\n",
+      "[32 49 45 34  1  3 45]\n",
+      "makeMove played_card  32\n",
+      "playedcard id 32\n",
+      "drawCard played card 32\n",
+      "playerhand [32 49 45 34  1  3 45]\n",
+      "(array([0], dtype=int64),)\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
       " [-1  0  0  0  0  0  0  0  0 -1]]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'drawCard' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_24380/1706907037.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0menv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiscs_on_board\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 7\u001B[1;33m \u001B[0menv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmakeMove\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      8\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0menv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiscs_on_board\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\PycharmProjects\\pythonProject1\\Teymi5-TV2\\verk3\\test\\SequenceGame.py\u001B[0m in \u001B[0;36mmakeMove\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    139\u001B[0m             \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiscs_on_board\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdisc\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    140\u001B[0m             \u001B[1;31m# now we need to draw a new card\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 141\u001B[1;33m             \u001B[0mdeck\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mhand\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mplayer\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdrawCard\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mhand\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mplayer\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mplayed_card\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    142\u001B[0m             \u001B[1;31m# lets pretty print this new state og the game\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    143\u001B[0m             \u001B[0mpretty_print\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdiscs_on_board\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mhand\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'drawCard' is not defined"
      ]
     }
    ],
@@ -43,45 +47,236 @@
     "env = SequenceEnv()\n",
     "\n",
     "print(env.discs_on_board)\n",
+    "print(env.hand[0])\n",
     "env.makeMove()\n",
-    "print(env.discs_on_board)"
+    "print(env.discs_on_board)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "makeMove played_card  28\n",
+      "playedcard id 28\n",
+      "drawCard played card 28\n",
+      "playerhand [28 33 28 11 12 29 35]\n",
+      "(array([0, 2], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  0  0  0  0 -1]]\n",
+      "1\n",
+      "makeMove played_card  3\n",
+      "playedcard id 3\n",
+      "drawCard played card 3\n",
+      "playerhand [20 49 45 34  1  3 45]\n",
+      "(array([5], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  0  0  0  0 -1]]\n",
+      "2\n",
+      "makeMove played_card  12\n",
+      "playedcard id 12\n",
+      "drawCard played card 12\n",
+      "playerhand [31 33 28 11 12 29 35]\n",
+      "(array([4], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "3\n",
+      "makeMove played_card  7\n",
+      "playedcard id 7\n",
+      "drawCard played card 7\n",
+      "playerhand [20 49 45 34  1  7 45]\n",
+      "(array([5], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "4\n",
+      "makeMove played_card  31\n",
+      "playedcard id 31\n",
+      "drawCard played card 31\n",
+      "playerhand [31 33 28 11 29 29 35]\n",
+      "(array([0], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "5\n",
+      "makeMove played_card  5\n",
+      "playedcard id 5\n",
+      "drawCard played card 5\n",
+      "playerhand [20 49 45 34  1  5 45]\n",
+      "(array([5], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  1 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "6\n",
+      "makeMove played_card  46\n",
+      "playedcard id 46\n",
+      "drawCard played card 46\n",
+      "playerhand [46 33 28 11 29 29 35]\n",
+      "(array([0], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  1 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "7\n",
+      "makeMove played_card  45\n",
+      "playedcard id 45\n",
+      "drawCard played card 45\n",
+      "playerhand [20 49 45 34  1 35 45]\n",
+      "(array([2, 6], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  1 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "8\n",
+      "makeMove played_card  5\n",
+      "playedcard id 5\n",
+      "drawCard played card 5\n",
+      "playerhand [ 5 33 28 11 29 29 35]\n",
+      "(array([0], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  1 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  2  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n",
+      "9\n",
+      "makeMove played_card  1\n",
+      "playedcard id 1\n",
+      "drawCard played card 1\n",
+      "playerhand [20 49 49 34  1 35 45]\n",
+      "(array([4], dtype=int64),)\n",
+      "None\n",
+      "[[-1  0  0  0  0  0  0  0  1 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  2  0  1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  0]\n",
+      " [-1  2  0  0  0  2  0  0  0 -1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "    print(env.makeMove())\n",
+    "    print(env.discs_on_board)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "from pprint import pprint\n",
-    "pprint(vars(env))\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
