Uppfærði one hot fallið

--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -386,6 +386,7 @@
     "def one_hot_encoding(board, hand):\n",
     "    temp_board = board.copy().flatten()\n",
     "    # ATH. Segi að það sé enginn leikmaður á hornunum. Þetta þarf að endurskoða, kannski sleppa.\n",
+    "    temp_board = temp1[temp1 != -1]\n",
     "    temp_board = np.where(temp_board == -1, 0, temp_board)\n",
     "    # One hot encoding á borði\n",
     "    one_hot = torch.nn.functional.one_hot(torch.tensor(temp_board).long(), num_classes = n + 1)\n",
@@ -398,6 +399,13 @@
     "    return torch.cat((one_hot, torch.tensor(hönd)))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
