Færði import segðir

--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -27,7 +27,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch"
    ]
   },
   {
@@ -381,7 +382,6 @@
    "outputs": [],
    "source": [
     "# ELÍAS\n",
-    "import torch\n",
     "\n",
     "def one_hot_encoding(board, hand):\n",
     "    temp_board = board.copy().flatten()\n",
