--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -373,39 +373,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# ELÍAS\n",
     "\n",
     "def one_hot_encoding(board, hand):\n",
-    "    temp_board = board.copy().flatten()\n",
-    "    # ATH. Segi að það sé enginn leikmaður á hornunum. Þetta þarf að endurskoða, kannski sleppa.\n",
-    "    temp_board = temp1[temp1 != -1]\n",
-    "    temp_board = np.where(temp_board == -1, 0, temp_board)\n",
-    "    # One hot encoding á borði\n",
-    "    one_hot = torch.nn.functional.one_hot(torch.tensor(temp_board).long(), num_classes = n + 1)\n",
-    "    # Flet borðið út. Hér væri líka hægt að halda forminu og breyta kóðun á hönd\n",
-    "    one_hot = one_hot.flatten()\n",
-    "    # Kóða höndina eins og talað var um\n",
-    "    hönd = np.zeros((50), dtype = np.int32)\n",
-    "    np.add.at(hönd, hand, 1)\n",
-    "    # Skeyti hönd aftan við borð, fjöldi spila á indexi. Ef sett er hand í stað hönd skeytist nr. spila við, mögulega jafngóð kóðun\n",
-    "    return torch.cat((one_hot, torch.tensor(hönd)))\n",
-    "\n"
+    "  temp_board = board.copy().flatten()\n",
+    "  # ATH. Segi að það sé enginn leikmaður á hornunum. Þetta þarf að endurskoða, kannski sleppa.\n",
+    "  temp_board = temp1[temp1 != -1]\n",
+    "  temp_board = np.where(temp_board == -1, 0, temp_board)\n",
+    "  # One hot encoding á borði\n",
+    "  one_hot = torch.nn.functional.one_hot(torch.tensor(temp_board).long(), num_classes = n + 1)\n",
+    "  # Flet borðið út. Hér væri líka hægt að halda forminu og breyta kóðun á hönd\n",
+    "  one_hot = one_hot.flatten()\n",
+    "  # Kóða höndina eins og talað var um\n",
+    "  hönd = np.zeros((50), dtype = np.int32)\n",
+    "  np.add.at(hönd, hand, 1)\n",
+    "  # Skeyti hönd aftan við borð, fjöldi spila á indexi. Ef sett er hand í stað hönd skeytist nr. spila við, mögulega jafngóð kóðun\n",
+    "  return torch.cat((one_hot, torch.tensor(hönd)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -418,9 +403,8 @@
    "hash": "8926e7d889c19ebfffb4fc64746dbd1197d0d6096200c693dce178a72073afc3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('base': conda)",
-   "language": "python",
-   "name": "python397jvsc74a57bd095ec9ec1504d83f612128e0fb229072f90bbb4cb09d9d5d93b5dd26e0ca2cfd1"
+   "display_name": "Python 3.8.10 64-bit ('snek': venv)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -432,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
