--- a/verk3/sequence.ipynb
+++ b/verk3/sequence.ipynb
@@ -378,17 +378,16 @@
     "def one_hot_encoding(board, hand):\n",
     "  temp_board = board.copy().flatten()\n",
     "  # ATH. Segi að það sé enginn leikmaður á hornunum. Þetta þarf að endurskoða, kannski sleppa.\n",
-    "  temp_board = temp1[temp1 != -1]\n",
-    "  temp_board = np.where(temp_board == -1, 0, temp_board)\n",
+    "  temp_board = temp_board[temp_board != -1]\n",
     "  # One hot encoding á borði\n",
     "  one_hot = torch.nn.functional.one_hot(torch.tensor(temp_board).long(), num_classes = n + 1)\n",
     "  # Flet borðið út. Hér væri líka hægt að halda forminu og breyta kóðun á hönd\n",
     "  one_hot = one_hot.flatten()\n",
     "  # Kóða höndina eins og talað var um\n",
-    "  hönd = np.zeros((50), dtype = np.int32)\n",
-    "  np.add.at(hönd, hand, 1)\n",
+    "  hond = np.zeros((50), dtype = np.int32)\n",
+    "  np.add.at(hond, hand, 1)\n",
     "  # Skeyti hönd aftan við borð, fjöldi spila á indexi. Ef sett er hand í stað hönd skeytist nr. spila við, mögulega jafngóð kóðun\n",
-    "  return torch.cat((one_hot, torch.tensor(hönd)))"
+    "  return torch.cat((one_hot, torch.tensor(hond)))"
    ]
   }
  ],
