--- a/verk3/SequenceOO.ipynb
+++ b/verk3/SequenceOO.ipynb
@@ -36,23 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[====================] Finished 100 episodes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env = SequenceEnv()\n",
-    "\n",
-    "# env.play_full_game()\n",
-    "\n",
-    "env.learn(episodes=100)"
+    "env = SequenceEnv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "  env.play_full_game(verbose=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.learn(policy=\"parametrized\", episodes=100)"
    ]
   }
  ],
