--- a/verk3/SequenceOO.ipynb
+++ b/verk3/SequenceOO.ipynb
@@ -25,7 +25,15 @@
    "metadata": {
     "id": "4RWk2LpLs1ec"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "338\n"
+     ]
+    }
+   ],
    "source": [
     "# import numpy as np\n",
     "# import matplotlib.pyplot as plt\n",
@@ -33,6 +41,19 @@
     "\n",
     "from SequenceGame import SequenceEnv\n",
     "env = SequenceEnv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.initialize_game()\n",
+    "print(env.attributes)\n",
+    "for i in range(5):\n",
+    "  env.make_move(policy=(\"random\", \"random\"))\n",
+    "  print(env.attributes)"
    ]
   },
   {
